# goblin_lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml  main.yml
.venv2/: pyvenv.cfg
docs/: conf.py  example.ipynb  index.rst
docs/_build/html/: genindex.html  objects.inv  searchindex.js
docs/_build/html/_modules/goblin_lite/: data_fetcher.html  data_grapher.html  database.html  database_manager.html  goblin.html  goblin_data_manager.html  impact_categories.html
docs/_build/html/_sources/: index.md.txt  index.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/example/: index.html
docs/_build/html/autoapi/goblin_lite/: index.html
docs/_build/html/autoapi/goblin_test/: index.html
docs/html/: .buildinfo  CONTRIBUTING.html  INSTALLATION.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/goblin_lite/: data_fetcher.html  data_grapher.html  database.html  database_manager.html  goblin.html  goblin_data_manager.html  impact_categories.html
docs/html/_modules/goblin_lite/LCA_processing/: crop_lca_generator.html  impact_categories.html  landuse_lca_generator.html  lca_total_generator.html  (+1 more)
docs/html/_sources/: CONTRIBUTING.md.txt  example.ipynb.txt  index.md.txt
docs/html/autoapi/: index.html
docs/html/autoapi/goblin_lite/: index.html
joss/: paper.bib  paper.md
src/goblin_lite/: data_fetcher.py  data_grapher.py  database_manager.py  goblin.py  goblin_data_manager.py  impact_categories.py
src/goblin_lite/LCA_processing/: crop_lca_generator.py  impact_categories.py  landuse_lca_generator.py  lca_total_generator.py  livestock_lca_generator.py
src/goblin_lite/data_processing/: forest_carbon_generator.py  landuse_data_generator.py
src/goblin_lite/database/: goblin_database.db
src/goblin_lite/resource_manager/: data_fetcher.py  database_manager.py  directory.py  scenario_data_fetcher.py
src/goblin_lite/scenario_analysis/: data_grapher.py
src/tests/: example.py
src/tests/data/: cbm_factory.yaml  config.json  config_retired.json  test.csv
tests/: db_example.py  directory_test.py  example.py  external_db_fetch_test.py  fetch_test.py  goblin_test.py  output_test.py
tests/data/: cbm_factory.yaml  config.json
tests/data/DATABASE/: instance_1.db
tests/data/integration/input/: scenario_input_dataframe.csv  total_grassland_area.csv  total_spared_area.csv  total_spared_area_by_soil_group.csv
tests/data/integration/output/: .~lock.landuse_data.csv#  .~lock.transition_matrix.csv#  cbm_afforestation_data.csv  landuse_data.csv  transition_matrix.csv
tests/data/output_test/: _climate_change_totals.xlsx  climate_change_totals.csv
tests/graph_data/: water_quality.csv
tests/integration/: test_land_cover_balance.py  test_landcover_integration.py
(+111 files in other folders)
