[tool.poetry]
name = "goblin_lite"
version = "0.3.0"
description = "A goblin tool for the generation of static land balance scenarios and environmental impacts"
authors = ["Colm Duffy"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.4"
numpy = "^1.25.0"
sqlalchemy-utils = "*"
cattle_lca = {git = "https://github.com/colmduff/cattle_lca.git", branch = "main"}
sheep_lca = {git = "https://github.com/colmduff/sheep_lca.git", branch = "main"}
crop_lca = {git = "https://github.com/colmduff/crop_lca.git", branch = "main"}
grassland_production = {git = "https://github.com/colmduff/grassland_production.git", branch = "main"}
livestock_generation = {git = "https://github.com/colmduff/livestock_generation.git", branch = "main"}
static_scenario_generator = { git = "https://github.com/colmduff/static_scenario_generator.git", branch = "main" }
landcover_assignment  = {git = "https://github.com/colmduff/landcover_assignment.git", branch = "main"}
landcover_lca  = {git = "https://github.com/colmduff/landcover_lca.git", branch = "main"}
cbm_runner = {git = "https://github.com/colmduff/cbm_runner.git", branch = "main"}
scenario_assessment = {git = "https://github.com/colmduff/scenario_assessment.git", branch = "main"}
seaborn = "^0.13.1"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
